<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>wtf.casper.storageapi</groupId>
    <artifactId>StorageAPI</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>storageapi-${project.version}</finalName>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
<!--                    <artifactSet>-->
<!--                        <includes>-->
<!--                            <include>**</include>-->
<!--                        </includes>-->
<!--                    </artifactSet>-->
                    <relocations>
                        <relocation>
                            <pattern>dev.dejvokep.boostedyaml</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.boostedyaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.hikari</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.google</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>dev.dejvokep.boostedyaml</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.boostedyaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.mongodb</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.mongodb</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>reactor</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.reactor</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.reactivestreams</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.reactivestreams</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.github.benmanes.caffeine</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.caffeine</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.objenesis</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.objenesis</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.mariadb</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.mariadb</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.sqlite</pattern>
                            <shadedPattern>wtf.casper.storageapi.libs.sqlite</shadedPattern>
                        </relocation>
                    </relocations>
                    <minimizeJar>false</minimizeJar>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.26</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>dev.dejvokep</groupId>
            <artifactId>boosted-yaml</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.11</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>3.0.8</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>31.1-jre</version>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.1.7</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.objenesis/objenesis -->
        <dependency>
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>3.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.43.0.0</version>
        </dependency>

        <!-- junit 5, unit test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>